--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -8,24 +8,14 @@ jobs:
   create_release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Get latest tag name
-        id: get_tag_name
-        run: echo ::set-output name=tag_name::$(git describe --tags --abbrev=0 HEAD)
-      - name: Get changelog entry
-        id: get_changelog_entry
-        run: |
-          tag_name=$(git describe --tags --abbrev=0 HEAD)
-          body=$(awk -v tag="$tag_name" '/## \[Unreleased\]/{flag=1;next}/## \[/{exit}flag' CHANGELOG.md | sed -e 's/^## //' -e '/^[[:space:]]*$/d' | awk '{printf "%s",$0;}' | sed 's/\n/\\n/g')
-          title=$(awk -v tag="$tag_name" '/## \[Unreleased\]/{flag=1;next}/## \[/{exit}flag' CHANGELOG.md | head -n 1 | sed -e 's/^## //' -e '/^[[:space:]]*$/d')
-          echo "::set-output name=title::$title"
-          echo "::set-output name=body::$body"
       - name: Create release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.get_tag_name.outputs.tag_name }}
-          release_name: ${{ steps.get_changelog_entry.outputs.title }}
-          body: ${{ steps.get_changelog_entry.outputs.body }}
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: ${{ github.event.head_commit.message }}
