--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,19 +13,14 @@ jobs:
       - name: Get latest tag name
         id: get_tag_name
         run: echo ::set-output name=tag_name::$(git describe --tags --abbrev=0 HEAD)
-      - name: Get changelog entry
-        id: get_changelog_entry
-        run: |
-          tag_name=$(git describe --tags --abbrev=0 HEAD)
-          title="$tag_name"
-          body=$(git tag -l --format='%(contents)' $tag_name)
-          echo "::set-output name=title::$title"
-          echo "::set-output name=body::$body"
+      - name: Get tag message
+        id: get_tag_message
+        run: echo ::set-output name=body::$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
       - name: Create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.get_tag_name.outputs.tag_name }}
-          release_name: ${{ steps.get_changelog_entry.outputs.title }}
-          body: ${{ steps.get_changelog_entry.outputs.body }}
+          release_name: ${{ steps.get_tag_name.outputs.tag_name }}
+          body: ${{ steps.get_tag_message.outputs.body }}
