--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo ::set-output name=tag::$(git describe --tags --abbrev=0)
       - name: Get latest changelog entry
         id: changelog
-        run: echo ::set-output name=changelog::$(awk -v tag=$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
+        run: echo ::set-output name=changelog::$(awk -v tag=$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD)))
       - name: Create release
         uses: actions/create-release@v1
         env:
