--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -8,18 +8,18 @@ jobs:
   create_release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Get latest tag name
-        id: tag
-        run: echo ::set-output name=tag::$(git describe --tags --abbrev=0)
-      - name: Get latest changelog entry
-        id: changelog
-        run: echo ::set-output name=changelog::$(awk -v tag=$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD)))
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Get latest tag details
+        id: get_tag_details
+        run: |
+          echo ::set-output name=tag_name::$(git describe --tags --abbrev=0 HEAD)
+          echo ::set-output name=tag_message::$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
       - name: Create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag.outputs.tag }}
-          release_name: Release ${{ steps.tag.outputs.tag }}
-          body: ${{ steps.changelog.outputs.changelog }}
+          tag_name: ${{ steps.get_tag_details.outputs.tag_name }}
+          release_name: ${{ steps.get_tag_details.outputs.tag_name }}
+          body: ${{ steps.get_tag_details.outputs.tag_message }}
