--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,16 +10,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get latest tag details
-        id: get_tag_details
+      - name: Get latest tag name
+        id: get_tag_name
+        run: echo ::set-output name=tag_name::$(git describe --tags --abbrev=0 HEAD)
+      - name: Get changelog entry
+        id: get_changelog_entry
         run: |
-          echo ::set-output name=tag_name::$(git describe --tags --abbrev=0 HEAD)
-          echo ::set-output name=tag_message::$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
+          tag_name=$(git describe --tags --abbrev=0 HEAD)
+          body=$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
+          title=$(git tag -n --format='%(contents)' $(git describe --tags --abbrev=0 HEAD))
+          echo "::set-output name=title::$title"
+          echo "::set-output name=body::$body"
       - name: Create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.get_tag_details.outputs.tag_name }}
-          release_name: ${{ steps.get_tag_details.outputs.tag_name }}
-          body: ${{ steps.get_tag_details.outputs.tag_message }}
+          tag_name: ${{ steps.get_tag_name.outputs.tag_name }}
+          release_name: ${{ steps.get_changelog_entry.outputs.title }}
+          body: ${{ steps.get_changelog_entry.outputs.body }}
