--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,5 +27,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.get_tag_name.outputs.tag_name }}
-          release_name: ${{ steps.get_changelog_entry.outputs.title }}
+          release_name: ${{ steps.get_tag_name.outputs.tag_name }}
           body: ${{ steps.get_changelog_entry.outputs.body }}
